--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Try</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, hic.</p>
+    <p class="textsize3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, hic.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, deleniti!</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, veniam.</p>
 </body>
